# open_coinspot_sdk

./: Cargo.toml  README.md  shell.nix
src/: lib.rs
src/v2/: mod.rs
src/v2/account_api/: mod.rs
src/v2/account_api/read_only/: mod.rs  status_check.rs
src/v2/public_api/: completed_orders.rs  completed_orders_coin.rs  completed_orders_coin_market.rs  completed_orders_coin_market_summary.rs  completed_orders_coin_summary.rs  completed_orders_summary.rs  latest_buy_price.rs  latest_buy_price_market.rs  latest_coin_price.rs  latest_coin_price_market.rs  latest_price.rs  latest_prices.rs  latest_sell_price.rs  latest_sell_price_market.rs  mod.rs  open_orders.rs  open_orders_coin.rs  open_orders_coin_market.rs
src/v2/public_api_utils/: completed_orders_coin.rs  completed_orders_coin_market.rs  completed_orders_coin_market_summary.rs  completed_orders_coin_summary.rs  latest_buy_price.rs  latest_buy_price_market.rs  latest_coin_price.rs  latest_coin_price_market.rs  latest_prices.rs  latest_sell_price.rs  latest_sell_price_market.rs  open_orders_coin.rs  open_orders_coin_market.rs
src/v2/signature/: mod.rs
src/v2/types/: mod.rs
