[package]
name = "coinspot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
